# cmake-builder

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  workflow.yml
.github/: release-please-config.json
.github/actions/cmake-builder/ubuntu-latest/base/: action.yaml
.github/actions/cmake-builder/ubuntu-latest/toolchains/gcc/: action.yaml
.github/scripts/: construct-matrix.py  construct_matrix.py  generate-steps.py  generate_steps.py  preset-schema.json  pyproject.toml  validate_presets.py
.github/workflows/: ci.yml  cmake-builder.yml
.github/workflows/cmake-builder/: cmake-builder.yml
.github/workflows/cmake-builder/actions/install-dependencies/: action.yml
.github/workflows/cmake-builder/scripts/: pyproject.toml  validate-presets.py
actions/fetch-scripts/: action.yml
actions/setup-runners/: action.yml  generate-action.js
cmake-builder/actions/fetch-scripts/: action.yml
cmake-builder/actions/setup-runners/: action.yml
scripts/: validate-presets.py
tests/: CMakeLists.txt  CMakePresets.json  test_construct_matrix.py  test_generate_steps.py  test_validate_presets.py
tests/test/: test_main.cpp
