[project]
name = "cmake-builder"
version = "0.1.0"
description = "python scripts for the cmake-builder action"
requires-python = ">=3.11"
dependencies = ["cmakepresets", "jsonschema>=4.23.0", "requests>=2.32.3"]
classifiers = ["Private :: Do Not Upload"]

[tool.uv.sources]
cmakepresets = { git = "https://github.com/tkk2112/cmakepresets.git" }
pyproject-aliases = { git = "https://github.com/tkk2112/pyproject_aliases.git" }

[tool.aliases]
validate = "uv run validate_presets.py --presets"
construct = "uv run construct_matrix.py"
generate = "uv run generate_steps.py"

[dependency-groups]
dev = ["pyproject-aliases"]
