[project]
name = "cmake-builder"
version = "0.2.0"
description = "scripts for the cmake-builder workflow"
requires-python = ">=3.11"
dependencies = ["cmakepresets>=0.4.0", "jsonschema>=4.23.0", "requests>=2.32.3"]
classifiers = ["Private :: Do Not Upload"]

[tool.aliases]
validate = "uv run validate_presets.py --presets"
construct = "uv run construct_matrix.py"
generate = "uv run generate_steps.py"

[dependency-groups]
dev = [
    "pyproject-aliases>=0.2.0",
]
